--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "build": "webpack --config webpack.development.config.js",
+    "build": "webpack",
     "start": "node ./dist/server.js",
     "prod-build": "webpack --mode production"
   },
@@ -20,8 +20,6 @@
     "clean-webpack-plugin": "^3.0.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-middleware": "^3.7.2",
-    "webpack-hot-middleware": "^2.25.0",
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
