--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   "devDependencies": {
     "@babel/core": "^7.8.3",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
+    "@types/bcrypt": "^3.0.0",
     "@types/jest": "^24.9.0",
     "babel-loader": "^8.0.6",
+    "bcryptjs": "^2.4.3",
     "clean-webpack-plugin": "^3.0.0",
     "jest": "^24.9.0",
     "ts-jest": "^24.3.0",
@@ -28,6 +31,7 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "@babel/runtime": "^7.8.3",
     "apollo-server-express": "^2.9.16",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
