--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-typescript": "^7.8.3",
     "@types/bcrypt": "^3.0.0",
     "@types/jest": "^24.9.0",
+    "@types/jsonwebtoken": "^8.3.6",
     "babel-loader": "^8.0.6",
     "bcryptjs": "^2.4.3",
     "clean-webpack-plugin": "^3.0.0",
@@ -36,6 +37,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "graphql": "^14.5.8"
+    "graphql": "^14.5.8",
+    "jsonwebtoken": "^8.5.1"
   }
 }
