--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
+    "type-check": "tsc --noEmit",
     "build": "webpack",
     "start": "node ./dist/server.js",
     "prod-build": "webpack --mode production",
@@ -18,11 +19,14 @@
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
-    "@types/bcrypt": "^3.0.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.2",
+    "@types/graphql": "^14.5.0",
     "@types/jest": "^24.9.0",
     "@types/jsonwebtoken": "^8.3.6",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
+    "graphql-tools": "^4.0.6",
     "jest": "^24.9.0",
     "ts-jest": "^24.3.0",
     "typescript": "^3.7.5",
