--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "type-check": "tsc --noEmit",
+    "type-check:watch": "npm run type-check -- --watch",
     "build": "webpack",
     "start": "node ./dist/server.js",
     "prod-build": "webpack --mode production",
