--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
+    "lint": "eslint src/**/*.ts",
     "build": "webpack",
     "start": "node ./dist/server.js",
     "prod-build": "webpack --mode production",
@@ -25,8 +26,13 @@
     "@types/graphql": "^14.5.0",
     "@types/jest": "^24.9.0",
     "@types/jsonwebtoken": "^8.3.6",
+    "@typescript-eslint/eslint-plugin": "^2.16.0",
+    "@typescript-eslint/parser": "^2.16.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.20.0",
     "graphql-tools": "^4.0.6",
     "jest": "^24.9.0",
     "ts-jest": "^24.3.0",
