--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
-    "lint": "eslint src/**/*.ts",
-    "build": "webpack",
+    "lint": "eslint ./src --ext .js,.ts",
+    "webpack": "webpack",
+    "build": "npm run type-check && npm run lint && npm run webpack --mode production",
+    "build-dev": "npm run type-check && npm run lint && npm run webpack",
     "start": "node ./dist/server.js",
-    "prod-build": "webpack --mode production",
     "test": "jest"
   },
   "author": "Athens Holloway",
