--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
     "lint": "eslint ./src --ext .js,.ts",
-    "webpack": "webpack",
-    "build": "npm run type-check && npm run lint && npm run webpack --mode production",
-    "build-dev": "npm run type-check && npm run lint && npm run webpack",
+    "webpack": "webpack --mode production",
+    "webpack-dev": "webpack",
+    "build": "npm run type-check && npm run lint && npm run webpack && npm run test",
+    "build-dev": "npm run type-check && npm run lint && npm run webpack-dev && npm run test",
     "start": "node ./dist/server.js",
     "test": "jest"
   },
@@ -34,7 +35,6 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.0",
-    "graphql-tools": "^4.0.6",
     "jest": "^24.9.0",
     "ts-jest": "^24.3.0",
     "typescript": "^3.7.5",
@@ -51,6 +51,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^14.5.8",
-    "jsonwebtoken": "^8.5.1"
+    "graphql-tools": "^4.0.6",
+    "jsonwebtoken": "^8.5.1",
+    "winston": "^3.2.1"
   }
 }
