--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "npm run type-check && npm run lint && npm run webpack && npm run test",
     "build-dev": "npm run type-check && npm run lint && npm run webpack-dev && npm run test",
     "start": "node ./dist/server.js",
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "author": "Athens Holloway",
   "license": "ISC",
