--- a/.env
+++ b/.env
@@ -4,3 +4,13 @@ JWT_SECRET=secret
 JWT_EXPIRATION=30d
 BODY_PARSER_LIMIT=100kb
 LOGGING_LEVEL=info
+DATABASE_HOSTNAME=localhost
+DATABASE_PORT=3306
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
+DATABASE_SCHEMA=
+SEQUELIZE_DIALECT=mysql
+SEQUELIZE_CONNECTION_POOL_MAX=5
+SEQUELIZE_CONNECTION_POOL_MIN=0
+SEQUELIZE_CONNECTION_POOL_AQUIRE_TIMEOUT=30000
+SEQUELIZE_CONNECTION_POOL_IDLE_TIMEOUT=10000
