--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "webpack": "webpack --mode production",
     "webpack-dev": "webpack",
     "build": "npm run type-check && npm run lint && npm run webpack && npm run test",
-    "build-dev": "npm run type-check && npm run lint && npm run webpack-dev && npm run test",
+    "build-dev": "npm run type-check && npm run lint && npm run webpack-dev",
     "start": "node ./dist/server.js",
     "test": "jest --coverage"
   },
@@ -24,10 +24,12 @@
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
     "@types/bcryptjs": "^2.4.2",
+    "@types/bluebird": "^3.5.29",
     "@types/express": "^4.17.2",
     "@types/graphql": "^14.5.0",
     "@types/jest": "^24.9.0",
     "@types/jsonwebtoken": "^8.3.6",
+    "@types/validator": "^12.0.1",
     "@typescript-eslint/eslint-plugin": "^2.16.0",
     "@typescript-eslint/parser": "^2.16.0",
     "babel-loader": "^8.0.6",
@@ -53,6 +55,8 @@
     "graphql": "^14.5.8",
     "graphql-tools": "^4.0.6",
     "jsonwebtoken": "^8.5.1",
+    "mysql2": "^2.1.0",
+    "sequelize": "^5.21.3",
     "winston": "^3.2.1"
   }
 }
