--- a/.env
+++ b/.env
@@ -6,9 +6,9 @@ BODY_PARSER_LIMIT=100kb
 LOGGING_LEVEL=info
 DATABASE_HOSTNAME=localhost
 DATABASE_PORT=3306
-DATABASE_USERNAME=
-DATABASE_PASSWORD=
-DATABASE_SCHEMA=
+DATABASE_USERNAME=db_user
+DATABASE_PASSWORD=Socomcompliance1
+DATABASE_SCHEMA=compliant_db
 SEQUELIZE_DIALECT=mysql
 SEQUELIZE_CONNECTION_POOL_MAX=5
 SEQUELIZE_CONNECTION_POOL_MIN=0
